# cpp-reflection

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  vcpkg.json
.github/workflows/: conan+cmake.yml
benchmarks/: CMakeLists.txt  reflection.cpp
docs/: CMakeLists.txt
include/reflection/: constructor.h  event.h  exceptions.h  function.h  library.h  macros.h  metaobject.h  method.h  property.h  reflectable.h  utility.h
src/: CMakeLists.txt  library.cpp  reflectable.cpp  utility.cpp
tests/: CMakeLists.txt  reflection.cpp  test.cpp
